--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,6 @@ jobs:
             deploy-
 
       - name: Install Node package
-        working-directory: frontend
         run: |
           npm install
 
@@ -62,5 +61,5 @@ jobs:
       - name: Replace S3 bucket contents
         run: |
           aws s3 rm s3://${{ secrets.AWS_FRONTEND_S3_BUCKET }} --recursive
-          aws s3 cp frontend/dist s3://${{ secrets.AWS_FRONTEND_S3_BUCKET }} --recursive
+          aws s3 cp dist s3://${{ secrets.AWS_FRONTEND_S3_BUCKET }} --recursive
           aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
