--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@uiw/react-codemirror": "^4.23.5",
     "axios": "^1.7.7",
+    "bun": "^1.1.38",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
