--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,5 @@
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
-  "plugins": [
-    "@babel/plugin-proposal-private-property-in-object"
-  ]
+  "plugins": ["@babel/plugin-proposal-private-property-in-object"]
 }
